--- a/zone.paw.stream-deck.mmhmm.sdPlugin/manifest.json
+++ b/zone.paw.stream-deck.mmhmm.sdPlugin/manifest.json
@@ -97,6 +97,54 @@
       ],
       "Tooltip": "Select a display mode of slides",
       "UUID": "zone.paw.stream-deck.mmhmm.actions.slides"
+    },
+    {
+      "Icon": "images/icons/mmhmm-20",
+      "Name": "Show Next Slide",
+      "States": [
+        {
+          "Image": "images/icons/off-air-72",
+          "Name": "No Next Slide",
+          "Title": "Next"
+        },
+        {
+          "Image": "images/icons/on-air-72",
+          "Name": "Next Slide",
+          "Title": "Next"
+        },
+        {
+          "Image": "images/icons/disabled-72",
+          "Name": "Disabled",
+          "Title": "Disabled",
+          "ShowTitle" : false
+        }
+      ],
+      "Tooltip": "Show the next slide",
+      "UUID": "zone.paw.stream-deck.mmhmm.actions.next"
+    },
+    {
+      "Icon": "images/icons/mmhmm-20",
+      "Name": "Show Previous Slide",
+      "States": [
+        {
+          "Image": "images/icons/off-air-72",
+          "Name": "No Previous Slide",
+          "Title": "Previous"
+        },
+        {
+          "Image": "images/icons/on-air-72",
+          "Name": "Previous Slide",
+          "Title": "Previous"
+        },
+        {
+          "Image": "images/icons/disabled-72",
+          "Name": "Disabled",
+          "Title": "Disabled",
+          "ShowTitle" : false
+        }
+      ],
+      "Tooltip": "Show the previous slide",
+      "UUID": "zone.paw.stream-deck.mmhmm.actions.prev"
     }
   ],
   "Author": "A.I. <ailis@paw.zone>",
